fix: horizontal text scroller visible spawning

--- a/src/components/HorizontalTextSlider/style.css
+++ b/src/components/HorizontalTextSlider/style.css
@@ -1,8 +1,5 @@
 .horizontal-text-slider__wrapper {
   overflow: hidden;
-  max-width: 1440px;
-  margin-left: auto;
-  margin-right: auto;
   position: relative;
   height: 218px;
   padding-top: calc(120px - 36px);
@@ -19,41 +16,26 @@
 
 .horizontal-text-slider {
   position: absolute;
-  animation: init 10s linear infinite;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 200px;
   line-height: 100%;
   /* identical to box height, or 200px */
-
   letter-spacing: -0.05em;
-
   /* Gray */
-
   color: #9D9D9D;
   white-space: nowrap;
 }
 
+.horizontal-text-slider__one {
+  animation: text-one-scroll 10s linear infinite;
+}
+
 .horizontal-text-slider__two {
-  position: absolute;
   transform: translate(100%);
   -webkit-transform: translate(100%);
-  animation: init 10s linear infinite;
-  animation-delay: 5s;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 200px;
-  line-height: 100%;
-  /* identical to box height, or 200px */
-
-  letter-spacing: -0.05em;
-
-  /* Gray */
-
-  color: #9D9D9D;
-  white-space: nowrap;
+  animation: text-two-scroll 20s linear infinite;
 }
 
 .horizontal-text-slider__designer {
@@ -64,10 +46,21 @@
   color: #FFFFFF;
 }
 
-@keyframes init {
+@keyframes text-one-scroll {
   0% {
     transform: translate(0%, 0);
     -webkit-transform: translate(0%, 0);
+  }
+  100% {
+    transform: translate(-100%, 0);
+    -webkit-transform: translate(-100%, 0);
+  }
+}
+
+@keyframes text-two-scroll {
+  0% {
+    transform: translate(100%, 0);
+    -webkit-transform: translate(100%, 0);
   }
   100% {
     transform: translate(-100%, 0);
@@ -95,9 +88,6 @@
 
 @media (max-width: 570px) {
   .horizontal-text-slider {
-    font-size: 128px;
-  }
-  .horizontal-text-slider__two {
     font-size: 128px;
   }
   .horizontal-text-slider__wrapper {
